--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <div class="tab-content py-5" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
           <div class="row justify-content-center mb-5">
-            <div class="col col-md-4 text-left">
+            <div class="col col-md-4 text-left mb-4">
               <h3>The Engineering Sphere</h3>
               <div>
                 <p>The Engineering Sphere is the initiative taken for engineers to provide Everything that they need!
@@ -253,7 +253,7 @@
             </div>
           </div>
           <div class="row justify-content-center mb-5">
-            <div class="col col-md-4 text-left">
+            <div class="col col-md-4 text-left mb-4">
               <h3>The Engineering Sphere v2.0</h3>
               <div>
                 <p>Version 2.0 for TheEngineeringSphere website</p>
@@ -271,7 +271,7 @@
           </div>
 
           <div class="row justify-content-center mb-5">
-            <div class="col col-md-4 text-left">
+            <div class="col col-md-4 text-left mb-4">
               <h3>Study | The Engineering Sphere</h3>
               <div>
                 <p>The Engineering Sphere | Study is the first service created under TheEngineeringSphere.</p>
@@ -294,7 +294,7 @@
         </div>
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
           <div class="row justify-content-center mb-5">
-            <div class="col col-md-4 text-left">
+            <div class="col col-md-4 text-left mb-4">
               <h3>Face Mask Detection</h3>
               <div>
                 <p>This project was to learn more about Keras and its application</p>
