hiding know more link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="hero">
             <h2>Hi, I'm Darshan</h2>
             <p>I love working on interesting engineering problems</p>
-            <a href="https://docs.google.com/document/d/1Amb8t0oJRL3QkLFDyvBwPtknZtH-aLR6/edit?usp=sharing&ouid=104267676347234328918&rtpof=true&sd=true" target="_blank">Know more about me</a>
+            <!-- <a href="https://docs.google.com/document/d/1Amb8t0oJRL3QkLFDyvBwPtknZtH-aLR6/edit?usp=sharing&ouid=104267676347234328918&rtpof=true&sd=true" target="_blank">Know more about me</a> -->
         </section>
     </div>
 </body>
