some exciting changes!

--- a/index.html
+++ b/index.html
@@ -3,17 +3,274 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Darshan Kadam - Software Engineer</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="parent-container">
 
-        <section class="hero">
-            <h2>Hi, I'm Darshan</h2>
-            <p>I love working on interesting engineering problems</p>
-            <!-- <a href="https://docs.google.com/document/d/1Amb8t0oJRL3QkLFDyvBwPtknZtH-aLR6/edit?usp=sharing&ouid=104267676347234328918&rtpof=true&sd=true" target="_blank">Know more about me</a> -->
-        </section>
-    </div>
+
+    <section id="home" class="hero">
+        <div class="atom-wrapper">
+            <div class="nucleus"></div>
+            <div class="orbit orbit1">
+                <div class="electron"></div>
+              </div>
+              <div class="orbit orbit2">
+                <div class="electron"></div>
+              </div>
+              <div class="orbit orbit3">
+                <div class="electron"></div>
+              </div>
+              <div class="orbit orbit4">
+                <div class="electron"></div>
+              </div>
+        </div>
+        <div class="hero-content fade-in">
+            <h1 data-text="DARSHAN KADAM">DARSHAN KADAM</h1>
+            <p class="subtitle">Software Engineer</p>
+            <p class="description">Building next-generation applications with cutting-edge technology. Specialized in full-stack development, AI integration, and scalable system architecture.</p>
+            <a href="#contact" class="cta-button">Initialize Contact</a>
+        </div>
+    </section>
+
+    <section id="about" class="section">
+        <div class="container">
+            <h2>Overview</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Elite Software Engineer with advanced capabilities in full-stack development and AI integration. Currently deployed at Cornerstone OnDemand, specializing in next-generation UI frameworks and intelligent system architecture.</p>
+                    <p>Academic excellence achieved with 9.2/10 GPA in Computer Engineering. Core competencies include React ecosystem mastery, Ruby on Rails backend optimization, and cutting-edge GenAI implementation for enterprise-level applications.</p>
+                    <p>Proven track record in high-performance system delivery and cross-functional team leadership.</p>
+                </div>
+                <div class="stats">
+                    <div class="stat-item">
+                        <div class="stat-number">9.2</div>
+                        <div class="stat-label">Academic GPA</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">2+</div>
+                        <div class="stat-label">Years Active</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">15+</div>
+                        <div class="stat-label">Tech Stack</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number">5+</div>
+                        <div class="stat-label">Major Projects</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="experience" class="section">
+        <div class="container">
+            <h2>Mission Log</h2>
+            <div class="experience-item">
+                <div class="experience-header">
+                    <div>
+                        <div class="job-title">Associate Software Engineer</div>
+                        <div class="company">Cornerstone OnDemand, Pune</div>
+                    </div>
+                    <div class="duration">July 2023 – Present</div>
+                </div>
+                <ul>
+                    <li>Spearheaded development of Blocks framework - revolutionary UI system for customizable landing pages</li>
+                    <li>Engineered multiple high-performance widgets enhancing user engagement metrics</li>
+                    <li>Implemented GenAI capabilities in Talent Marketplace with advanced security protocols</li>
+                    <li>Optimized Ruby on Rails backend architecture for Learning Experience Platform</li>
+                </ul>
+            </div>
+
+            <div class="experience-item">
+                <div class="experience-header">
+                    <div>
+                        <div class="job-title">Junior Engineer</div>
+                        <div class="company">Cornerstone OnDemand, Pune</div>
+                    </div>
+                    <div class="duration">Jan 2023 – July 2023</div>
+                </div>
+                <ul>
+                    <li>Architected microservices infrastructure for Talent Marketplace ecosystem</li>
+                    <li>Achieved 40% increase in test coverage through comprehensive testing frameworks</li>
+                    <li>Delivered critical features for Projects and Mentor Opportunities modules</li>
+                    <li>Collaborated with cross-functional teams to ensure seamless system integration</li>
+                </ul>
+            </div>
+
+            <div class="experience-item">
+                <div class="experience-header">
+                    <div>
+                        <div class="job-title">React Developer Intern</div>
+                        <div class="company">PillarPlus Pvt. Ltd., Jaipur</div>
+                    </div>
+                    <div class="duration">Feb 2022 – May 2022</div>
+                </div>
+                <ul>
+                    <li>Contributed to Y-Combinator backed global MEP consultancy platform</li>
+                    <li>Developed advanced features for construction project management system</li>
+                    <li>Implemented modern React patterns with TypeScript and Firebase integration</li>
+                    <li>Collaborated with design team to deliver pixel-perfect user interfaces</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects" class="section">
+        <div class="container">
+            <h2>Project Arsenal</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-title">The Engineering Sphere</div>
+                    <div class="project-description">
+                        Advanced web platform engineered to solve complex engineering problems through innovative digital solutions. Complete end-to-end development including UX architecture, full-stack implementation, and alpha testing protocols.
+                    </div>
+                    <div class="project-skills">
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">React</span>
+                        <span class="skill-tag">TypeScript</span>
+                        <span class="skill-tag">Firebase</span>
+                        <span class="skill-tag">MERN</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-title">AI Face Detection System</div>
+                    <div class="project-description">
+                        High-precision CNN-based face mask detection system achieving 95% accuracy rate. Integrated with Django web framework for seamless deployment and real-time processing capabilities.
+                    </div>
+                    <div class="project-skills">
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">CNN</span>
+                        <span class="skill-tag">Django</span>
+                        <span class="skill-tag">TensorFlow</span>
+                        <span class="skill-tag">OpenCV</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-title">Autonomous Navigation Bot</div>
+                    <div class="project-description">
+                        Sophisticated pathfinding algorithm implementation for autonomous robot navigation. Advanced hardware-software integration with real-time image processing and adaptive path planning.
+                    </div>
+                    <div class="project-skills">
+                        <span class="skill-tag">Arduino</span>
+                        <span class="skill-tag">C/C++</span>
+                        <span class="skill-tag">Computer Vision</span>
+                        <span class="skill-tag">Algorithms</span>
+                        <span class="skill-tag">Embedded Systems</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills" class="section">
+        <div class="container">
+            <h2>Technical Arsenal</h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>Core Languages</h3>
+                    <div class="skill-list">
+                        <span class="skill-item">C/C++</span>
+                        <span class="skill-item">Python</span>
+                        <span class="skill-item">JavaScript</span>
+                        <span class="skill-item">TypeScript</span>
+                        <span class="skill-item">Java</span>
+                        <span class="skill-item">Ruby</span>
+                        <span class="skill-item">HTML5/CSS3</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Frameworks & Libraries</h3>
+                    <div class="skill-list">
+                        <span class="skill-item">React</span>
+                        <span class="skill-item">Node.js</span>
+                        <span class="skill-item">Express</span>
+                        <span class="skill-item">Django</span>
+                        <span class="skill-item">Ruby on Rails</span>
+                        <span class="skill-item">Spring Boot</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Data & Cloud</h3>
+                    <div class="skill-list">
+                        <span class="skill-item">MongoDB</span>
+                        <span class="skill-item">MySQL</span>
+                        <span class="skill-item">Firebase</span>
+                        <span class="skill-item">AWS</span>
+                        <span class="skill-item">Docker</span>
+                        <span class="skill-item">Microservices</span>
+                    </div>
+                </div>
+
+                <div class="skill-category">
+                    <h3>Advanced Systems</h3>
+                    <div class="skill-list">
+                        <span class="skill-item">Machine Learning</span>
+                        <span class="skill-item">AI Integration</span>
+                        <span class="skill-item">System Architecture</span>
+                        <span class="skill-item">DevOps</span>
+                        <span class="skill-item">Performance Optimization</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Initialize Contact</h2>
+            <div class="contact-content">
+                <p>Ready to collaborate on next-generation projects. Available for high-impact opportunities in software engineering, AI development, and system architecture.</p>
+                <div class="contact-links">
+                    <a href="mailto:darshankadam1502@gmail.com" class="contact-link">Email</a>
+                    <a href="https://www.linkedin.com/in/darshankadam15/" class="contact-link" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/Darshank2002" class="contact-link" target="_blank">GitHub</a>
+                    <a href="#" class="contact-link">LeetCode</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Darshan Kadam. All systems operational.</p>
+        </div>
+    </footer>
+
+    <script>
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Add fade-in animation on scroll
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('fade-in');
+                }
+            });
+        }, observerOptions);
+
+        document.querySelectorAll('.section').forEach(section => {
+            observer.observe(section);
+        });
+    </script>
 </body>
 </html>
