--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="duration">July 2023 – Present</div>
                 </div>
                 <ul>
-                    <li>Spearheaded development of Blocks framework - revolutionary UI system for customizable landing pages</li>
+                    <li>Participated in the development of the Blocks framework - revolutionary UI system for customizable landing pages</li>
                     <li>Engineered multiple high-performance widgets enhancing user engagement metrics</li>
                     <li>Implemented GenAI capabilities in Talent Marketplace with advanced security protocols</li>
                     <li>Optimized Ruby on Rails backend architecture for Learning Experience Platform</li>
