--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
                     <div class="duration">Jan 2023 – July 2023</div>
                 </div>
                 <ul>
-                    <li>Architected microservices infrastructure for Talent Marketplace ecosystem</li>
                     <li>Achieved 40% increase in test coverage through comprehensive testing frameworks</li>
                     <li>Delivered critical features for Projects and Mentor Opportunities modules</li>
-                    <li>Collaborated with cross-functional teams to ensure seamless system integration</li>
                 </ul>
             </div>
 
@@ -108,9 +106,8 @@
                 </div>
                 <ul>
                     <li>Contributed to Y-Combinator backed global MEP consultancy platform</li>
-                    <li>Developed advanced features for construction project management system</li>
+                    <li>Developed features for construction project management system</li>
                     <li>Implemented modern React patterns with TypeScript and Firebase integration</li>
-                    <li>Collaborated with design team to deliver pixel-perfect user interfaces</li>
                 </ul>
             </div>
         </div>
